--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <div class="encabezado">
         <img class="logo" src="imagenes/Logo.svg" alt="logo de alura"> 
-        <h1 class="titulo"> Hora de Encriptar </h1>
+        <h1 class="titulo">¡ Hora de Encriptar ! </h1>
         </div> 
     </header>
 
